# ost-writing-assessment

./: .gitignore  README.md  pyproject.toml  requirements.txt
analysis/: README.md  feature_selection.py
data/: README.md  Writing_Assessment_Cleaned_Dataset_Tool_Specify.csv
docs/: feature_definitions.md
examples/: example_usage.py  feature_selection_analysis.ipynb
examples/sample_data/: README.txt  sample_01.txt  sample_02.txt  sample_03.txt  sample_04.txt  sample_05.txt  sample_06.txt  sample_07.txt  sample_08.txt  sample_09.txt  sample_10.txt
ost_writing/: __init__.py  extractor.py
ost_writing/features/: __init__.py  accuracy.py  clausal.py  cohesion.py  lexical.py  readability.py  surface.py  syntactic.py  variability.py
ost_writing/utils/: __init__.py  nlp_setup.py  text_processing.py
