[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Project Information 
[project]
name="ost-writing-assessment"
version="0.1.0"
description="Open-source toolkit for linguistic feature extraction in automated writing assessment research"
readme = "README.md"
requires-python = ">=3.8,<=3.13"
license = {text = "MIT"}
authors = [
 ]


# Dependencies
dependencies = [
        "nltk>=3.8",
        "spacy>=3.5",
        "numpy>=1.20",
        "pandas>=1.3",
        "textstat>=0.7",
        "tqdm>=4.60",
        "language-tool-python>=2.7",
        "scipy>=1.11",
        "statsmodels>=0.14.5",
        "scikit-learn>=1.3",
        "matplotlib>=3.5"
    ]

# Exclude tests and examples from the Package Building
[tool.setuptools.packages.find]
exclude = ["tests", "examples"]